--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+}
+body {
+    overflow-x: hidden;
+}
 .header {
     display: flex;
     flex-direction: row;
@@ -35,4 +42,348 @@
     font-weight: 300;
     font-size: 20px;  
     font-family: Verdana;   
+}
+/* START SLIDER-1 */
+
+
+.slider {
+    display: flex;
+    flex-direction: row;
+    margin: 15px 0px 140px 40px
+}
+
+/* Слайдер */
+.slick-slider{}
+/* Слайдер запущен */
+.slick-slider.slick-initialized{}
+/* Слайдер с точками */
+.slick-slider.slick-dotted{}
+/* Ограничивающая оболочка */
+.slick-list {}
+/* Лента слайдов */
+.slick-track{
+    display: flex;
+    align-items: flex-start;
+}
+/* Слайд */
+.slick-slide{}
+/* Слайд активный (показывается) */
+.slick-slide.slick-active{}
+/* Слайд основной */
+.slick-slide.slick-current{}
+/* Слайд по центру */
+.slick-slide.slick-center{}
+/* Клонированный слайд */
+.slick-slide.slick-cloned{}
+/* Стрелка */
+.slick-arrow{}
+/* Стрелка влево */
+.slick-arrow.slick-prev{
+}
+/* Стрелка вправо */
+.slick-arrow.slick-next{
+}
+/* Стрелка не активная */
+.slick-arrow.slick-disabled{}
+/* Точки (булиты) */
+.slick-dots{}
+.slick-dots li{}
+/* Активная точка */
+.slick-dots li.slick-active{}
+/* Элемент точки */
+.slick-dots li button{}
+
+.slider__item {
+    transition: all 0.3 ease 0s;
+    display: flex;
+    margin-left: -40px;
+    z-index: 10px;
+}
+
+.main__way {
+    margin: 0px 0px 0px 300px;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Raleway', sans-serif;
+}
+
+.main__way-title{
+    font-family: 'Raleway', sans-serif;
+    font-size: 46px;
+    margin: 0px 0px 80px 390px;
+}
+
+.main__way-el-num {
+    color: #282B22;
+    font-size: 24px;
+    margin-bottom: 60px;
+}
+
+.main__way-el-title {
+    color: #282B22;
+    font-size: 24px;
+    margin-bottom: 30px;
+}
+
+.main__way_body {
+    display: flex;
+    flex-direction: row;
+}
+
+.main__way_body-el {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Raleway', sans-serif;
+    margin: 0px 30px 0px 0px;
+    border-left: 1px solid #282B22;
+    padding: 0px 0px 0px 30px;
+}
+
+.greenBackground {
+    background-color: #3D4A39;
+    width: 1900px;
+    height: 688px;
+    margin-top: 140px;
+    padding: 50px 0px 0px 373px;
+}
+
+.greenBackground-title {
+    width: 526px;
+    height: 58px;
+    left: 537px;
+    top: 1756px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 46px;
+    line-height: 125%;
+    color: #fff;
+    margin: 100px 0px 70px 330px;
+}
+
+.greenBackground-top-row {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 70px;
+}
+
+.greenBackground-bottom-item {
+    display: flex;
+    flex-direction: row;
+}
+
+.greenBackground-bottom-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.top-row-item {
+    margin: 0px 107px 0px 107px;
+}
+
+.bottom-row-item {
+    display: flex;
+    flex-direction: column;
+    margin: 0px 107px 0px 107px;
+}
+
+.top-row-item img {
+    display: flex;
+    padding: 0px 0px 0px 30px;
+}
+
+.chandelier img {
+    padding: 0px 0px 0px 50px;
+}
+
+.bake img {
+    padding: 0px 0px 0px 100px;
+}
+
+.bottom-row-item img {
+    padding: 0px 0px 0px 20px;
+}
+
+.roof span {
+    font-size: 20px;
+}
+
+.light img {
+    padding: 0px 0px 0px 70px;
+}
+
+.top-row-item span {
+    width: 148px;
+    height: 31px;
+    left: 726px;
+    top: 1983px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 130%;
+    color: #fff;
+    opacity: 0.5;
+}
+
+.bottom-row-item span {
+    width: 148px;
+    height: 31px;
+    left: 726px;
+    top: 1983px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 130%;
+    color: #fff;
+    opacity: 0.5;
+}
+
+.underGreenBG {
+    margin-bottom: 30px;
+}
+
+
+.underGreenBG-big {
+    display: flex;
+    flex-direction: row;
+    margin: 0px 0px 0px 250px;
+}
+
+
+
+.center-top {
+    margin: 0px 0px 80px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.center-top span {
+    width: 814px;
+    height: 141px;
+    left: 387px;
+    top: 2484px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 130%;
+    text-align: center;
+    color: #282B22;
+}
+
+.left {
+    padding: 100px 90px 0px 0px;
+}
+
+.center {
+    padding: 140px 0px 0px 0px;
+}
+
+.right {
+    padding: 243px 0px 0px 0px;
+}
+
+.center-bottom {
+    display: flex;
+    flex-direction: row;
+}
+
+.center-bottom-left {
+    width: 370px;
+    height: 108px;
+    left: 893px;
+    top: 2740px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    color: #282B22;
+    opacity: 0.8;
+    padding: 35px 0px 35px 60px;
+    border-top: 1px solid #282b2280;
+    border-bottom: 1px solid #282b2280;
+}
+
+.center-bottom-right {
+    width: 370px;
+    height: 108px;
+    left: 893px;
+    top: 2740px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    color: #282B22;
+    opacity: 0.8;
+    padding: 35px 0px 35px 60px;
+    border-left: 1px solid #282b2280;
+    border-top: 1px solid #282b2280;
+    border-bottom: 1px solid #282b2280;
+}
+
+.advanteges-title {
+    width: 373px;
+    height: 58px;
+    left: 614px;
+    top: 3023px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 46px;
+    line-height: 125%;
+    text-align: center;
+    text-transform: uppercase;
+    color: #282B22;
+    margin-top: 140px;
+}
+
+.line-side_left {
+    width: 28px;
+    height: 24px;
+    left: 200px;
+    top: 3385px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 100%;
+    color: #282B22;
+    opacity: 0.3;
+}
+
+.line_right-title span {
+    width: 187px;
+    height: 42px;
+    left: 840px;
+    top: 3211px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 130%;
+    color: #282B22;
+}
+
+.line_right-text span {
+    width: 424px;
+    height: 44px;
+    left: 840px;
+    top: 3981px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 135%;
+    color: #282B22;
+    opacity: 0.8;
+}
+
+.advanteges-line {
+    display: flex;
+    flex-direction: row;
 }
