--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
+    cursor: pointer;
 }
 body {
     overflow-x: hidden;
@@ -326,6 +327,17 @@ body {
     border-bottom: 1px solid #282b2280;
 }
 
+.advanteges {
+    margin: 0px 0px 0px 376px;
+}
+
+.advanteges img {
+    position: absolute;
+    margin: 444px 0px 0px 144px;
+    z-index: 10;
+    filter: drop-shadow(0px 15px 20px rgba(0, 0, 0, 0.05));
+}
+
 .advanteges-title {
     width: 373px;
     height: 58px;
@@ -339,10 +351,24 @@ body {
     text-align: center;
     text-transform: uppercase;
     color: #282B22;
-    margin-top: 140px;
+    margin: 140px 0px 82px 413px;
 }
 
 .line-side_left {
+    width: 28px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 100%;
+    color: #282B22;
+    opacity: 0.3;
+    padding: 50px 573px 50px 40px;
+    border-left: 1px solid #282b2280 ;
+    border-top: 1px solid #282b2280 ;
+}
+
+.line-side_left span:hover  {
     width: 28px;
     height: 24px;
     left: 200px;
@@ -352,8 +378,8 @@ body {
     font-weight: 600;
     font-size: 24px;
     line-height: 100%;
-    color: #282B22;
-    opacity: 0.3;
+    color: #AE7B3C;
+    margin: 0px 573px 0px 0px;
 }
 
 .line_right-title span {
@@ -367,6 +393,20 @@ body {
     font-size: 32px;
     line-height: 130%;
     color: #282B22;
+}
+
+.line_right-title span:hover {
+    width: 187px;
+    height: 42px;
+    left: 840px;
+    top: 3211px;
+    color:#AE7B3C;    
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 130%; 
+    transition: 0.3s;
 }
 
 .line_right-text span {
@@ -383,7 +423,137 @@ body {
     opacity: 0.8;
 }
 
+.last {
+    border-bottom: 1px solid #282B2280;
+}
+
 .advanteges-line {
     display: flex;
     flex-direction: row;
+}
+
+.line-side_right {
+    padding: 50px 0px 50px 40px;
+    border-left: 1px solid #282b2280 ;
+    border-top: 1px solid #282b2280 ;
+}
+
+.input-block {
+    margin: 140px 0px 0px 150px;
+    display: flex;
+    flex-direction: row;
+}
+
+.input-left {
+    display: flex;
+    width: 800px;
+    height: 696px;
+    background: #3D4A39;
+
+}
+
+.input_container-title {
+    width: 413px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 46px;
+    line-height: 125%;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin: 100px 0px 0px 200px;
+}
+
+.input_container-subTitle {
+    width: 306px;
+    height: 46px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 145%;
+    color: #FFFFFF;
+    opacity: 0.8;
+    margin: 20px 0px 0px 200px;
+}
+
+.input_form {
+    color: #fff;
+    font-family: 'Raleway';
+}
+
+.input_form input#name {
+    background-color: #282b2200;
+    border: none;
+    border-bottom: 2px solid #ffffff9f;
+    color: #ffffff8e;
+    font-family: 'Raleway';
+    font-style: normal;
+    width: 300px;
+    font-weight: 500;
+    font-size: 16px;
+    margin: 40px 0px 25px 200px;
+}
+
+.input_text {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    color: #ffffff86;
+    width: 157px;
+    height: 18px;
+    margin: 0px 0px 40px 200px;
+}
+
+.input_text img {
+    opacity: 0.5;
+}
+
+.input_form input#phone {
+    background-color: #282b2200;
+    border: none;
+    border-bottom: 2px solid #ffffff9f;
+    color: #ffffff8e;
+    font-family: 'Raleway';
+    font-style: normal;
+    width: 300px;
+    font-weight: 500;
+    font-size: 16px;
+    margin: 0px 0px 25px 200px;
+}
+
+.input_form input#btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 22px 56px;
+    gap: 10px;
+    width: 300px;
+    height: 60px;
+    background: #AE7B3C;
+    box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.05);
+    border: none;
+    font-family: 'Raleway';
+    font-style: normal;
+    color:  #fff;
+    margin: 0px 0px 0px 200px;
+}
+
+.agree {
+    margin: 0px 0px 0px 200px;
+}
+
+.agree span{
+    width: 273px;
+    height: 14px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 130%;
+    color: #FFFFFF;
+    
 }
