--- a/style.css
+++ b/style.css
@@ -636,6 +636,7 @@ body {
     margin-bottom: 35px;
 }
 
+
 .workStage_item-title {
     width: 204px;
     height: 18px;
@@ -662,26 +663,241 @@ body {
 
 .secSlider{
     position: relative;
-    padding: 0px 0px 20px 200px;
+    padding: 0px 0px 20px 0px;
+    /* background-color: black; */
+}
+
+.secSlider__item {
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
 
 .slick-track {
-    padding: 0px 0px 0px 40px;
+    display: flex;
 }
 
-.secSlider.slick-arrow {
+.secSlider .slick-arrow {
     position: absolute;
     top: 50%;
-    z-index: 11;
+    z-index: 10;
     font-size: 0;
+    margin: 0px 20px 0px 20px;
+    width: 60px;
+    height: 60px;
 }
 
-.secSlider.slick-arrow.slick-prev {
+.secSlider .slick-arrow .slick-prev {
     left: 0;
-    background-image: url(/icon/Стрілка.png) 0 0 no-repeat;
+    background-image: url(/icon/arrow-l.png) ;
+    margin: 0px 0px 0px 20px;    
+    display: flex   ;
 }
 
-.secSlider.slick-arrow.slick-next {
-    background-image: url(/icon/Стрілка\ –\ копія.png) 0 0 no-repeat;
+.secSlider .slick-arrow .slick-next {
+    background-image: url(/icon/arrow-r.png) ;
     right: 0;
+    margin: 0px 0px 0px 220px;
+    display: flex;
+}
+
+.secSlider .slick-slide{
+    margin: 0px 30px 0px 30px;
+}
+
+.secSlider .slick-slide .slick-center{
+    margin: 0px 30px 0px 30px;
+}
+
+.secSlider .slick-slide .slick-active{
+    margin: 0px 30px 0px 30px;
+}
+
+.gifts-bigBox {
+    margin-top: 140px;
+    background-color: #F3F3F3;
+    width: 1920px;
+    height: 483px;
+}
+.gifts-block {
+    padding: 100px 118px 0px 118px;
+    margin: 0px 260px 0px 420px;
+
+}
+.gifts-title {
+    width: 362px;
+    height: 116px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 46px;
+    line-height: 125%;
+    text-align: center;
+    text-transform: uppercase;
+    color: #282B22;
+    margin: 0px 118px 23px 218px;
+}
+
+.gifts-text {
+    width: 355px;
+    height: 44px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 135%;
+    text-align: center;
+    color: #282B22;
+    opacity: 0.8;
+    margin: 0px 118px 40px 218px;
+}
+
+.gifts-btn input#btn{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 22px 56px;
+    gap: 10px;
+    width: 300px;
+    height: 60px;
+    background: #AE7B3C;
+    box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.05);
+    border: none;
+    font-family: 'Raleway';
+    font-style: normal;
+    color:  #fff;
+    margin: 0px 118px 40px 245px;
+}
+
+
+.giftCard {
+    position: absolute;
+    text-align: center;
+    text-justify: center;
+    width: 96px;
+}
+
+.leftCard {
+    margin: 156px 0px 0px 400px;
+}
+
+.rightCard {
+    margin: 156px 0px 0px 1250px;
+}
+
+.giftCard_text span{
+    width: 96px;
+    height: 23px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 145%;
+    text-align: center;
+    color: #3D4A39;
+}
+
+.giftCard_text {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 30px;
+}
+
+.giftCard_text img {
+    padding: 0px 0px 0px 0px;
+}
+
+.ourPartner {
+    width: 1920px;
+    height: 483px;
+    margin-top: 140px;  
+}
+
+.ourPartner_title {
+    margin: 0px 0px 0px 740px;
+}
+
+.ourPartner_title span{
+    width: 382px;
+    height: 58px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 46px;
+    line-height: 125%;
+    text-transform: uppercase;
+    color: #282B22;
+}
+
+.ourPartner_slider {
+    margin: 60px 0px 0px 0px;
+}
+
+.ourPartner_slider .slick-track{
+    width: 1300px;
+    height: 90px;
+}
+
+.ourPartner_slider .slick-slide{
+    margin: 0px 30px 0px 30px;
+}
+
+.ourPartner_slider__item {
+}
+.ourPartner_slider .slick-dots{
+    display: flex;
+    flex-direction: row;
+    margin-left: 840px;
+}
+.ourPartner_slider .slick-dots li{
+    list-style: none;
+    margin: 0px 16px; 
+}
+    
+    
+.ourPartner_slider .slick-dots button{
+    font-size: 0;
+   width: 10px;
+    height: 10px;
+ }
+    
+ 
+
+ .input-block_2 {
+    margin: 40px 0px 0px 150px;
+    display: flex;
+    flex-direction: row;
+}
+
+.footer {
+}
+.footer-big {
+}
+.footer-big_left {
+}
+.footer-big_left_top {
+}
+.footer-big_left_bottom {
+}
+.footer-big_center {
+}
+.footer-big_center_left {
+}
+.footer-big_center_right {
+}
+.footer-big_right {
+}
+.footer-big_right_top {
+}
+.footer-big_right_bottom {
+}
+.footer-midlle {
+}
+.footer-midlle_title {
+}
+.footer-midlle_sponsor {
+}
+.footer-small {
 }
